# esd-suite

./: .gitignore  CMakeLists.txt  README.md  index.html  properties.config
documentation/: building.md  get-started.md  python-bridge.md
documentation/building/: index.html
documentation/development/: backend.html  private.html  public.html
documentation/get-started/: index.html
documentation/ui-development/: calls.html  index.html  modals.html
engine/: main.cpp
private/: secret_processor.py
public/: modals.py  utils.py
scripts/: build.py  dev.py  embed.py  package.py  setup_deps.py
server/: api.py
tests/: test_python_bridge.py
ui/modals/: alert.html  custom.html  prompt.html  properties.config
ui/pages/: index.html
ui/splash/: splash.html
